sm/sm-b2b-connector/main/default/objects/Order/fields/Checkout_Type__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Type__c</fullName>
    <label>Checkout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Click Buy</fullName>
            </value>
            <value>
                <fullName>Regular Checkout</fullName>
                <default>true</default>
                <label>Regular Checkout</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>