sm/sm-b2b-connector/main/default/objects/Order/fields/checkoutOrder__c.field-meta.xml
<CustomField>
    <fullName>checkoutOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checkout Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>