sm/sm-b2b-connector/main/default/objects/Order/fields/LastCloneDate__c.field-meta.xml
<CustomField>
    <fullName>LastCloneDate__c</fullName>
    <label>Last Clone Date</label>
    <type>Date</type>
</CustomField>