sm/sm-b2b-connector/main/default/objects/Order/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SM Order</fullName>
            </value>
            <value>
                <fullName>B2B Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>