sm/sm-b2b-connector/main/default/objects/Order/fields/Payment_Gateway_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Log_Id__c</fullName>
    <inlineHelpText>Id of payment gateway log for this order</inlineHelpText>
    <label>Payment Gateway Log Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>