sm/sm-b2b-connector/main/default/objects/Order/fields/Payment_Method_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Id__c</fullName>
    <inlineHelpText>Id of the card payment method record linked to this order</inlineHelpText>
    <label>Payment Method Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>