sm/sm-b2b-connector/main/default/objects/Order/fields/smOrder__c.field-meta.xml
<CustomField>
    <fullName>smOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SM Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (smOrder)</relationshipLabel>
    <relationshipName>smOrders</relationshipName>
    <type>Lookup</type>
</CustomField>